# Projekt-Quadrotor

./: CMakeLists.txt  audio.cpp  audio.h  lqr.cpp  lqr.h  planar_quadrotor.cpp  planar_quadrotor.h  planar_quadrotor_visualizer.cpp  planar_quadrotor_visualizer.h  simulate.cpp  simulate.h
